Mon May 11 10:53:47 GMT 2015  Olly Betts <olly@survex.com>

	* common/log2.h,configure.ac: Change probe for log2() to check for a
	  declaration and '#include <cmath>' to get it to fix build on Solaris
	  with Sun C++.  C++11 compilers should all provide log2(), but let's
	  not rely on that just yet as it's easy to provide a fallback
	  implementation.

Mon May 11 07:04:06 GMT 2015  Olly Betts <olly@survex.com>

	* common/getopt.cc,net/tcpserver.cc: Fix clang warnings on OS X.
	  Reported by Germán M. Bravo.

Mon May 11 06:29:42 GMT 2015  Olly Betts <olly@survex.com>

	* api/constinfo.cc,docs/doxygen_api.conf.in,
	  docs/doxygen_source.conf.in,include/xapian/: C++11's noexcept
	  needs to be on definitions as well as declarations, but GCC
	  function attributes must only be on declarations, so split
	  XAPIAN_NOEXCEPT off from XAPIAN_NOTHROW.

Sun May 10 13:26:24 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser_internal.h,
	  tests/api_none.cc: Add support for optional reference counting of
	  FieldProcessor objects.

Sun May 10 11:07:36 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/intrusive_ptr.h,include/xapian/queryparser.h,
	  queryparser/queryparser.lemony,queryparser/queryparser_internal.h,
	  tests/api_none.cc: Add support for optional reference counting of
	  ValueRangeProcessor objects.

Thu May 07 12:42:11 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc,common/socket_utils.cc,common/socket_utils.h,
	  net/replicatetcpclient.cc,net/replicatetcpclient.h: Set SO_KEEPALIVE
	  for xapian-replicate's connection to the master, and add command
	  line option to allow setting socket-level timeouts (SO_RCVTIMEO and
	  SO_SNDTIMEO) on platforms that support them.  Fixes #546, reported
	  by nkvoll.

Thu May 07 12:00:15 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Fix connection timeout to be 10 seconds
	  rather than 10000 seconds which is has been since 1.2.3.
