@@ -55,14 +55,14 @@ InL2Weight::clone() const
 void
 InL2Weight::init(double factor)
 {
-    double wdfn_upper(get_wdf_upper_bound());
+    double wdfn_upper = get_wdf_upper_bound();
     if (wdfn_upper == 0) {
 	upper_bound = 0.0;
 	return;
     }
 
-    double termfrequency(get_termfreq());
-    double N(get_collection_size());
+    double termfrequency = get_termfreq();
+    double N = get_collection_size();
 
     wdfn_upper *= log2(1 + (param_c * get_average_length()) /
 		    get_doclength_lower_bound());
@@ -109,7 +109,7 @@ InL2Weight::get_sumpart(Xapian::termcount wdf, Xapian::termcount len,
 			Xapian::termcount) const
 {
     if (wdf == 0) return 0.0;
-    double wdfn(wdf);
+    double wdfn = wdf;
 
     wdfn *= log2(1 + c_product_avlen / len);
 
